--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
             <div class="why-choose-content">
                 <div class="why-choose-header">
                     <h2>The Reasons To Choose Us</h2>
-                    <p class="why-choose-intro">Smaller businesses are now cyber attacked 3X more often than large enterprises and government entities. 28%+ of executives have experienced a cyber attack on a home or guest network. <br><br><span class="company-name">TRST</span><span class="biski-x">x</span><span class="company-name">CYBER</span>, a professional technology organization, is your technology partner that provides solutions for IT Support, Cybersecurity Monitoring, Employee Training and Cyber Insurance to small and midsized businesses as well as High Net Worth Individuals.</p>
+                    <p class="why-choose-intro">Smaller businesses are now cyber attacked 3X more often than large enterprises and government entities. 28%+ of executives have experienced a cyber attack on a home or guest network. <br><br><span class="company-name">TRST</span><span class="biski-x">X</span><span class="company-name">CYBER</span>, a professional technology organization, is your technology partner that provides solutions for IT Support, Cybersecurity Monitoring, Employee Training and Cyber Insurance to small and midsized businesses as well as High Net Worth Individuals.</p>
                 </div>
                 <div class="solutions-grid">
                     <div class="solution-box">
                         <h3>Award Winning Cybersecurity</h3>
-                        <p><span class="company-name">TRST</span><span class="biski-x">x</span><span class="company-name">CYBER</span> provides advanced technology and expert monitoring by analysts.</p>
+                        <p><span class="company-name">TRST</span><span class="biski-x">X</span><span class="company-name">CYBER</span> provides advanced technology and expert monitoring by analysts.</p>
                     </div>
                     <div class="solution-box">
                         <h3>Simple Packages</h3>
@@ -239,7 +239,7 @@
                     </div>
                     <div class="solution-box">
                         <h3>Game-Changing Solutions</h3>
-                        <p><span class="company-name">TRST</span><span class="biski-x">x</span><span class="company-name">Cyber</span> revolutionizes security, empowering businesses to navigate threats confidently.</p>
+                        <p><span class="company-name">TRST</span><span class="biski-x">X</span><span class="company-name">Cyber</span> revolutionizes security, empowering businesses to navigate threats confidently.</p>
                     </div>
                 </div>
             </div>
@@ -255,7 +255,7 @@
                     <div class="concierge-text">
                         <p>Our Cyber Concierge Service Model Delivers Lightning Quick, Cost-Effective IT Solutions for Your Business and Family.</p>
                         <p><strong>Industry-Leading Call Desk Response Times:</strong> When you need IT support, waiting isn't an option. Our team provides the fastest response times in the industry, ensuring your technical issues are addressed immediately without the typical delays that cost your business time and money.</p>
-                        <p><strong>No Frustration with IT in Daily Life:</strong> By partnering with <span class="company-name">TRST</span><span class="biski-x">x</span><span class="company-name">CYBER</span>, you'll eliminate the daily IT headaches that plague businesses. Our proactive approach means technology works for you—not against you—allowing you to focus on what matters most: running your business.</p>
+                        <p><strong>No Frustration with IT in Daily Life:</strong> By partnering with <span class="company-name">TRST</span><span class="biski-x">X</span><span class="company-name">CYBER</span>, you'll eliminate the daily IT headaches that plague businesses. Our proactive approach means technology works for you—not against you—allowing you to focus on what matters most: running your business.</p>
                     </div>
                     <div class="concierge-image">
                         <img src="images/concierge-service.jpg" alt="Cyber Concierge Service">
@@ -269,7 +269,7 @@
             <div class="testimonials-container">
                 <div class="testimonials-header">
                     <h2>Testimonials</h2>
-                    <p>See what people are saying about <span class="company-name">TRST</span><span class="biski-x">x</span><span class="company-name">CYBER</span>.</p>
+                    <p>See what people are saying about <span class="company-name">TRST</span><span class="biski-x">X</span><span class="company-name">CYBER</span>.</p>
                 </div>
                 
                 <div class="testimonials-carousel">
