--- a/small-business.html
+++ b/small-business.html
@@ -227,7 +227,7 @@
                 </div>
                 <div class="partner-text">
                     <h2>Other Partner Solutions</h2>
-                    <p>Prefer a partner other than UNITE? <span class="company-name">TRST</span><span class="biski-x">x</span><span class="company-name">CYBER</span> collaborates with any IT provider that aligns with your business needs. For those unsure where to start, we assist in navigating the many available options to find the most suitable fit.</p>
+                    <p>Prefer a partner other than UNITE? <span class="company-name">TRST</span><span class="biski-x">X</span><span class="company-name">CYBER</span> collaborates with any IT provider that aligns with your business needs. For those unsure where to start, we assist in navigating the many available options to find the most suitable fit.</p>
                 </div>
             </div>
         </div>
@@ -265,7 +265,7 @@
 
         <!-- Benefits Section -->
         <div class="benefits-section">
-            <h2><span class="company-name">TRST</span><span class="biski-x">x</span><span class="company-name">CYBER</span> MDR-as-a-Service Solutions – Benefits</h2>
+            <h2><span class="company-name">TRST</span><span class="biski-x">X</span><span class="company-name">CYBER</span> MDR-as-a-Service Solutions – Benefits</h2>
             <div class="benefits-grid">
                 <div class="benefit-box reveal-element" data-delay="0.1">
                     <div class="benefit-check">✓</div>
