--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How Could Your Business Be Impacted by the New SEC Cybersecurity Requirements? - TRSTxCYBER</title>
+    <title>How Could Your Business Be Impacted by the New SEC Cybersecurity Requirements? - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
