--- a/blogs/blog7.html
+++ b/blogs/blog7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>6 Reasons Access Management Has Become a Critical Part of Cybersecurity - TRSTxCYBER</title>
+    <title>6 Reasons Access Management Has Become a Critical Part of Cybersecurity - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
