--- a/blogs/blog9.html
+++ b/blogs/blog9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 7 Cybersecurity Risks of Remote Work & How to Address Them - TRSTxCYBER</title>
+    <title>Top 7 Cybersecurity Risks of Remote Work & How to Address Them - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
