--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7 Advantages of Adopting a Defense-in-Depth Cybersecurity Strategy - TRSTxCYBER</title>
+    <title>7 Advantages of Adopting a Defense-in-Depth Cybersecurity Strategy - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
