--- a/blogs/blog11.html
+++ b/blogs/blog11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Email Compromise Jumped 81% Last Year! Learn How to Fight It - TRSTxCYBER</title>
+    <title>Business Email Compromise Jumped 81% Last Year! Learn How to Fight It - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
