--- a/blogs/blog12.html
+++ b/blogs/blog12.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to Use Threat Modeling to Reduce Your Cybersecurity Risk - TRSTxCYBER</title>
+    <title>How to Use Threat Modeling to Reduce Your Cybersecurity Risk - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
