--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Small Businesses Are Attacked by Hackers 3x More than Larger Ones - TRSTxCYBER</title>
+    <title>Small Businesses Are Attacked by Hackers 3x More than Larger Ones - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
