--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is Zero-Click Malware? How Do You Fight It? - TRSTxCYBER</title>
+    <title>What is Zero-Click Malware? How Do You Fight It? - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
