--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cybersecurity Awareness: Strengthening Your Team's Defense with Essential Cyber Hygiene - TRSTxCYBER</title>
+    <title>Cybersecurity Awareness: Strengthening Your Team's Defense with Essential Cyber Hygiene - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
