--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Does Your Business Have Any Cybersecurity Skeletons in the Closet? - TRSTxCYBER</title>
+    <title>Does Your Business Have Any Cybersecurity Skeletons in the Closet? - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
