--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What Is SaaS Ransomware - How Can You Defend Against It - TRSTxCYBER</title>
+    <title>What Is SaaS Ransomware - How Can You Defend Against It - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
