--- a/blogs/blog8.html
+++ b/blogs/blog8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why You Need to Understand "Secure by Design" Cybersecurity Practices - TRSTxCYBER</title>
+    <title>Why You Need to Understand "Secure by Design" Cybersecurity Practices - TRSTXCYBER</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="blogs.css">
     <script src="../footer.js" defer></script>
