--- a/footer.html
+++ b/footer.html
@@ -35,7 +35,7 @@
         </div>
         <div class="footer-right">
             <a href="index.html" class="footer-logo">
-                <img src="images/logo.png" alt="TRSTxCYBER" class="footer-logo-img">
+                <img src="images/logo.png" alt="TRSTXCYBER" class="footer-logo-img">
             </a>
         </div>
     </div>
