--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <div class="nav-container">
         <a href="index.html" class="logo">
-            <img src="images/h_logo.png" alt="TRSTxCYBER" class="nav-logo-img">
+            <img src="images/h_logo.png" alt="TRSTXCYBER" class="nav-logo-img">
         </a>
         <div class="hamburger-menu">
             <div class="hamburger-icon">
