--- a/quote.html
+++ b/quote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get a Quote - TRSTxCYBER</title>
+    <title>Get a Quote - TRSTXCYBER</title>
     <link rel="stylesheet" href="styles.css">
     <script src="footer.js" defer></script>
     <style>
