--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>TRSTXCYBER | Trusted Cybersecurity Solutions</title>
+    <meta name="description" content="TRSTXCYBER provides trusted cybersecurity, IT support, compliance, and cyber insurance solutions for businesses and individuals.">
+    <meta property="og:title" content="TRSTXCYBER">
+    <meta property="og:site_name" content="TRSTXCYBER">
+    <meta name="twitter:title" content="TRSTXCYBER">
     <link rel="stylesheet" href="styles.css?v=1751665237690">
     <style>
         @media (max-width: 992px) {
