--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRSTXCYBER | Trusted Cybersecurity Solutions</title>
+    <title>TRSTXCYBER</title>
     <meta name="description" content="TRSTXCYBER provides trusted cybersecurity, IT support, compliance, and cyber insurance solutions for businesses and individuals.">
     <meta property="og:title" content="TRSTXCYBER">
     <meta property="og:site_name" content="TRSTXCYBER">
